[package]
name = "cloud-util"
version = "0.4.1"
authors = ["ypf <yuitta@163.com>", "Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"
license = "Apache-2.0"
description = "cita-cloud utility library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
prost = "0.10.4"
cita_cloud_proto = "=6.6.0"
status_code = { package = "cloud-code", version = "0.4" }
toml = "0.5.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
